[Task 5.1] : Search history endpoints with DTOs and query-level limit