@@ -1,12 +1,16 @@
 package com.hypeflow.service;
 
+import com.hypeflow.api.PopularWordDto;
+import com.hypeflow.api.SearchHistoryDto;
 import com.hypeflow.model.SearchHistory;
 import com.hypeflow.repo.SearchHistoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -15,18 +19,36 @@ public class SearchHistoryServiceImpl implements SearchHistoryService {
     private final SearchHistoryRepository historyRepository;
 
     @Override
-    public List<SearchHistory> getLastSearches(int limit) {
+    public List<SearchHistoryDto> getLastSearches(int limit) {
         return historyRepository
-                .findAllByOrderBySearchedAtDesc(PageRequest.of(0, limit));
+                .findAllByOrderBySearchedAtDesc(PageRequest.of(0, limit))
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
     @Override
-    public List<String> getMostSearchedWords(int limit) {
-        List<Object[]> results = historyRepository.findMostSearchedWords();
-        return results.stream()
-                .limit(limit)
-                .map(r -> (String) r[0])
-                .collect(Collectors.toList());
+    public List<PopularWordDto> getMostSearchedWords(int limit) {
+        return historyRepository
+                .findMostSearchedWords(PageRequest.of(0, limit))
+                .stream()
+                .map(row -> new PopularWordDto((String) row[0], (Long) row[1]))
+                .toList();
+    }
+
+    private SearchHistoryDto toDto(SearchHistory entity) {
+        List<String> sourcesList = entity.getSources() != null && !entity.getSources().isBlank()
+                ? Arrays.asList(entity.getSources().split(","))
+                : Collections.emptyList();
+
+        return new SearchHistoryDto(
+                entity.getWord(),
+                entity.getStartDate(),
+                entity.getEndDate(),
+                sourcesList,
+                entity.getTotalMentions(),
+                entity.getSearchedAt()
+        );
     }
 
 }
